align build with extra-icons